--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,8 +1,8 @@
 <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
   fxLayoutGap="10px" fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
-    <mat-card>
+  <div fxFlex="40">
+    <mat-card *ngIf="dish">
       <mat-card-header>
         <mat-card-title>
           <h3>{{dish.name | uppercase}}</h3>
@@ -18,14 +18,16 @@
       </mat-card-actions>
     </mat-card>
   </div>
-
-  <div fxFlex="40" *ngIf="dish">
-    <h3>Comments</h3>
-    <mat-list>
-      <mat-list-item *ngFor="let d of dish.comments">
-        <p matLine>{{d.comment}}</p>
-        <p matLine>{{d.rating}} Stars</p>
-        <p matLine>-- {{d.author}} {{d.date | date}}</p>
+  
+  <div fxFlex="40">
+    <mat-list *ngIf="dish">
+      <h3>Comments</h3>     
+      <mat-list-item *ngFor="let comment of dish.comments">
+        <h4 mat-line>{{comment.comment}}</h4>
+        <p mat-line>{{comment.rating}} Stars</p>
+        <p mat-line>
+          <span>-- {{comment.author}} {{comment.date | date}}</span>
+        </p>
       </mat-list-item>
     </mat-list>
   </div>
