--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<mat-toolbar color="primary">
-<span>Welcome to Angular</span>
-</mat-toolbar>
-
-<app-menu></app-menu>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
 
