--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -13,15 +13,16 @@
         <p>{{dish.description}}</p>
       </mat-card-content>
       <mat-card-actions>
+        <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
       </mat-card-actions>
     </mat-card>
   </div>
-  
+
   <div fxFlex="40">
     <mat-list *ngIf="dish">
-      <h3>Comments</h3>     
+      <h3>Comments</h3>
       <mat-list-item *ngFor="let comment of dish.comments">
         <h4 mat-line>{{comment.comment}}</h4>
         <p mat-line>{{comment.rating}} Stars</p>
