--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,16 +54,21 @@
     </mat-card>
   </div>
 
-
   <div fxFlex>
-    <h2>Corporate Leadership</h2>       
-      <mat-list *ngIf="leaders">              
-        <mat-list-item *ngFor="let lead of leaders">          
-          <img mat-card-avatar src="{{lead.image}}">         
-          <p mat-line>{{lead.name}} {{lead.abbr}}</p>     
-          <p mat-line>{{lead.designation}}</p>
-          <p mat-line>{{lead.description}}</p>     
-        </mat-list-item>
-      </mat-list>    
+    <h2>Corporate Leadership</h2>
+    <mat-list *ngIf="leaders">
+      <mat-list-item *ngFor="let lead of leaders">
+        <img mat-list-avatar src="{{lead.image}}" alt="{{lead.name}}">
+        <h4 mat-line>{{lead.name}} {{lead.abbr}}</h4>
+        <p mat-line>{{lead.designation}}</p>
+        <p mat-line>{{lead.description}}</p>
+      </mat-list-item>
+    </mat-list>
   </div>
+
+  <div [hidden]="leaders">
+    <mat-spinner></mat-spinner>
+    <h3>Loading...Please Wait...</h3>
+  </div>
+
 </div>
