--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -20,6 +20,11 @@
     </mat-card>
   </div>
 
+  <div [hidden]="dish">
+    <mat-spinner></mat-spinner>
+    <h3>Loading...Please Wait...</h3>
+  </div>
+
   <div fxFlex="40">
     <mat-list *ngIf="dish">
       <h3>Comments</h3>
@@ -32,5 +37,7 @@
       </mat-list-item>
     </mat-list>
   </div>
+
+
 
 </div>
