--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,32 +1,44 @@
 <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
   fxLayoutGap="10px" fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
-    <mat-card *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility" [@expand]>
+    <mat-card>
       <mat-card-header>
         <mat-card-title>
           <h3>{{dish.name | uppercase}}</h3>
         </mat-card-title>
       </mat-card-header>
-      <img mat-card-image src="{{dish.image}}" alt="{{dish.name}}">
+      <img mat-card-image src="{{BaseURL + dish.image}}" alt="{{dish.name}}">
       <mat-card-content>
         <p>{{dish.description}}</p>
       </mat-card-content>
       <mat-card-actions>
+        <button mat-button [routerLink]="['/dishdetail',prev]">
+          <span class="fa fa-chevron-left fa-lg"></span>
+        </button>
         <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
+        <span class="flex-spacer"></span>
+        <button mat-button [routerLink]="['/dishdetail',next]">
+          <span class="fa fa-chevron-right fa-lg"></span>
+        </button>
       </mat-card-actions>
     </mat-card>
   </div>
 
-  <div [hidden]="dish">
+  <div [hidden]="dish || errMess">
     <mat-spinner></mat-spinner>
     <h3>Loading...Please Wait...</h3>
   </div>
 
-  <div fxFlex="40">
-    <mat-list *ngIf="dish">
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess.message}}</h4>
+  </div>
+
+  <div fxFlex="40" *ngIf="dish"  [@visibility]="visibility" [@expand]>
+    <mat-list>
       <h3>Comments</h3>
       <mat-list-item *ngFor="let comment of dish.comments">
         <h4 mat-line>{{comment.comment}}</h4>
@@ -36,8 +48,34 @@
         </p>
       </mat-list-item>
     </mat-list>
+
+    <div class="form-size">
+      <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+        <mat-list *ngIf="commentForm.valid">
+          <mat-list-item>
+            <h4 mat-line>{{commentForm.value["comment"]}}</h4>
+            <p mat-line>{{commentForm.value["rating"]}} Stars</p>
+            <p mat-line>
+              <span>-- {{commentForm.value["author"]}}</span>
+            </p>
+          </mat-list-item>
+        </mat-list>
+        <P>
+          <mat-form-field class="full-width">
+            <input matInput formControlName="author" type="text" placeholder="Name" required>
+            <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+          </mat-form-field>
+        </P>
+        <mat-slider formControlName="rating" tickInterval="1" min="1" max="5" thumbLabel></mat-slider>
+        <p>
+          <mat-form-field class="full-width">
+            <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 required></textarea>
+            <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+          </mat-form-field>
+        </p>
+        <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+      </form>
+    </div>
   </div>
-
-
 
 </div>
